--- a/lyt-example/pom.xml
+++ b/lyt-example/pom.xml
@@ -14,7 +14,7 @@
 	<name>lyt-example</name>
 	<description>Demo project for Spring Boot</description>
 
-
+	<packaging>jar</packaging>
 
 	<dependencies>
 		<dependency>
@@ -53,9 +53,15 @@
 			<artifactId>commons-beanutils</artifactId>
 			<version>${commons-beanutils.version}</version>
 		</dependency>
-
+		<!-- 单元测试 -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+		</dependency>
 	</dependencies>
 
+	<!-- 这个插件，可以将应用打包成一个可执行的jar包 -->
 	<build>
 		<plugins>
 			<plugin>
