--- a/lyt-dao/pom.xml
+++ b/lyt-dao/pom.xml
@@ -113,11 +113,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql-connect.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.mybatis.spring.boot</groupId>
-			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>${mysql-spring.version}</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.mybatis.spring.boot</groupId>-->
+<!--			<artifactId>mybatis-spring-boot-starter</artifactId>-->
+<!--			<version>${mysql-spring.version}</version>-->
+<!--		</dependency>-->
 		<!-- redis -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
