--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <dozer.version>5.5.1</dozer.version>
         <druid.version>1.1.22</druid.version>
         <mysql-connect.version>6.0.6</mysql-connect.version>
-        <mysql-spring.version>2.1.2</mysql-spring.version>
+        <mybatis-spring.version>2.1.2</mybatis-spring.version>
         <guava.version>29.0-jre</guava.version>
         <amqp-client.version>5.9.0</amqp-client.version>
         <commons-fileupload.version>1.4</commons-fileupload.version>
