--- a/my-shop/src/main/resources/application-dev.yml
+++ b/my-shop/src/main/resources/application-dev.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8011
+  port: 8020
   tomcat:
     access-log-pattern: checkserver--%h %l %u %t "%r" %s %b (%D ms)
     # log pattern of the access log
@@ -10,16 +10,40 @@ server:
 #datasource config
 spring:
   datasource:
-#      driverClassName: com.mysql.jdbc.Driver
-      url: jdbc:mysql://127.0.0.1:3306/tbd?characterEncoding=UTF-8
-      username: root  #freeuser
-      password: root  #b7v508dojL
-      initialSize: 10
-      maxActive: 200
+#   driverClassName: com.mysql.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/myshop?characterEncoding=UTF-8
+    username: root  #freeuser
+    password: root  #b7v508dojL
+    initialSize: 10
+    maxActive: 200
+    druid:
+      initial-size: 5
+      min-idle: 5
+      max-active: 20
+      max-wait: 60000
+      # 间隔多久进行一次检测，检测需要关闭的空闲连接
+      time-between-eviction-runs-millis: 60000
+      # 一个连接在池中最小生存的时间
+      min-evictable-idle-time-millis: 300000
+      validation-query: SELECT 1 FROM DUAL
+      test-while-idle: true
+      test-on-borrow: false
+      test-on-return: false
+      pool-prepared-statements: true
+      max-pool-prepared-statement-per-connection-size: 20
+      connect-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+      use-global-data-source-stat: true
+      filters: stat,wall,log4j2
 
 #mybatis config
 mybatis:
-  typeAliasesPackage: org.cloud.demo.service.model
+  #typeAliasesPackage: com.lyt.moduel.*
+  type-aliases-package: com.lyt.moduel.*
   mapperLocations: classpath:mappings/**/*.xml
   configuration:
     call-setters-on-nulls: true
+    # 打印sql, 方便调试
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    use-generated-keys: true
+    default-statement-timeout: 60
+    default-fetch-size: 100
