--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,8 @@
         <commons-io.version>2.6</commons-io.version>
         <commons-codec.version>1.14</commons-codec.version>
         <junit.version>4.13</junit.version>
+        <pagehelper.version>1.2.13</pagehelper.version>
+
     </properties>
 
     <modules>
