--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <fastjson.version>1.2.68</fastjson.version>
         <lombok.version>1.18.12</lombok.version>
-        <logback.version>1.3.0-alpha5</logback.version>
+<!--        <logback.version>1.3.0-alpha5</logback.version>-->
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <httpclient.version>4.5.12</httpclient.version>
         <mail.version>1.4.7</mail.version>
