2020-6-1 1、list练习 2、Springboot上传下载

--- a/lyt-dao/pom.xml
+++ b/lyt-dao/pom.xml
@@ -184,6 +184,13 @@
 			<version>${pagehelper.version}</version>
 		</dependency>
 
+
+		<!-- mp3转换pcm -->
+		<dependency>
+			<groupId>com.googlecode.soundlibs</groupId>
+			<artifactId>mp3spi</artifactId>
+			<version>${googlecode.soundlibs.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
