--- a/lyt-example/src/main/resources/application-dev.yml
+++ b/lyt-example/src/main/resources/application-dev.yml
@@ -49,6 +49,25 @@ spring:
         max-idle: 100 # 连接池中的最大空闲连接
         min-idle: 50 # 连接池中的最小空闲连接
         max-wait: 6000ms
+
+  # 配置Springboot上传下载功能
+  ## MULTIPART (MultipartProperties)
+  servlet:
+    multipart:
+      # 开启 multipart 上传功能
+      enabled: true
+      # 文件写入磁盘的阈值
+      file-size-threshold: 2KB
+      # 最大文件大小
+      max-file-size: 200MB
+      # 最大请求大小
+      max-request-size: 215MB
+
+## 文件存储所需参数
+# 所有通过 REST APIs 上传的文件都将存储在此目录下
+file:
+  upload-dir: D:/uploads
+
 #mybatis config
 mybatis:
   #typeAliasesPackage: com.lyt.moduel.*
