--- a/my-shop/src/main/resources/application-dev.yml
+++ b/my-shop/src/main/resources/application-dev.yml
@@ -9,6 +9,7 @@ server:
 
 #datasource config
 spring:
+  # 数据库配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     # serverTimezone=GMT%2B8
@@ -36,6 +37,7 @@ spring:
       connect-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
       use-global-data-source-stat: true
       filters: stat,wall,log4j2
+
 # redis 配置
   redis:
     host: 127.0.0.1
@@ -49,6 +51,27 @@ spring:
         max-idle: 100 # 连接池中的最大空闲连接
         min-idle: 50 # 连接池中的最小空闲连接
         max-wait: 6000ms
+
+  # 配置Springboot上传下载功能
+  ## MULTIPART (MultipartProperties)
+  servlet:
+    multipart:
+      # 开启 multipart 上传功能
+      enabled: true
+      # 文件写入磁盘的阈值
+      file-size-threshold: 2KB
+      # 最大文件大小
+      max-file-size: 200MB
+      # 最大请求大小
+      max-request-size: 215MB
+
+## 文件存储所需参数
+# 所有通过 REST APIs 上传的文件都将存储在此目录下
+file:
+  upload-dir: /uploads
+
+
+
 #mybatis config
 mybatis:
   #typeAliasesPackage: com.lyt.moduel.*
