--- a/lyt-example/pom.xml
+++ b/lyt-example/pom.xml
@@ -76,6 +76,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<!-- 支持Thymeleaf模板 -->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-thymeleaf</artifactId>-->
+<!--		</dependency>-->
+
 	</dependencies>
 
 	<!-- 这个插件，可以将应用打包成一个可执行的jar包 -->
