--- a/my-shop/src/main/resources/application-dev.yml
+++ b/my-shop/src/main/resources/application-dev.yml
@@ -7,8 +7,15 @@ server:
     accesslog:
       directory: /opt/deployjars/login/logs/
 
-#datasource config
 spring:
+  mvc:
+    view:
+      # 定位模板的目录
+#      prefix: classpath:/templates/
+      prefix: /
+      # 给返回的页面添加后缀名
+      suffix: .html
+
   # 数据库配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
