--- a/lyt-example/pom.xml
+++ b/lyt-example/pom.xml
@@ -78,10 +78,10 @@
 		</dependency>
 
 		<!-- 支持Thymeleaf模板 -->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-thymeleaf</artifactId>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 
 	</dependencies>
 
