--- a/my-shop/src/main/resources/application-dev.yml
+++ b/my-shop/src/main/resources/application-dev.yml
@@ -49,7 +49,8 @@ spring:
 
 # redis 配置
   redis:
-    host: 127.0.0.1
+    #host: 127.0.0.1
+    host: 192.168.10.239
     port: 6379
     timeout: 2000ms
     database: 0
