--- a/lyt-shop/pom.xml
+++ b/lyt-shop/pom.xml
@@ -17,8 +17,18 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.lyt</groupId>
+			<artifactId>lyt-dao</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<!-- 访问页面是需要的模板 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
 		<dependency>
@@ -37,6 +47,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
 	</dependencies>
 
 	<build>
