--- a/lyt-shop/src/main/resources/application-dev.yml
+++ b/lyt-shop/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ server:
     access-log-enabled: true
     accesslog:
       directory: /opt/deployjars/login/logs/
-
+    uri-encoding: UTF-8
 spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
@@ -74,7 +74,15 @@ spring:
       max-file-size: 200MB
       # 最大请求大小
       max-request-size: 215MB
-
+#  spring.http.encoding.force=true
+#  spring.http.encoding.charset=UTF-8
+#  spring.http.encoding.enabled=true
+#  server.tomcat.uri-encoding=UTF-8
+  http:
+    encoding:
+      force: true
+      charset: UTF-8
+      enabled: true
 ## 文件存储所需参数
 # 所有通过 REST APIs 上传的文件都将存储在此目录下
 file:
