--- a/lyt-example/pom.xml
+++ b/lyt-example/pom.xml
@@ -90,6 +90,12 @@
 			<artifactId>tess4j</artifactId>
 			<version>${tess4j.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>5.2.6.RELEASE</version>
+			<scope>compile</scope>
+		</dependency>
 
 
 	</dependencies>
