--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,8 @@
         <baidu.version>4.7.0</baidu.version>
         <!-- 繁体转简体 -->
         <houbb.opencc4j.version>1.0.2</houbb.opencc4j.version>
+        <!-- 使用Hutool实现AES、DES加密解密 -->
+        <hutool-all.version>5.3.10</hutool-all.version>
     </properties>
 
     <modules>
