添加通过jsch远程执行一些linux命令

--- a/my-shop/src/main/resources/application-dev.yml
+++ b/my-shop/src/main/resources/application-dev.yml
@@ -47,6 +47,10 @@ spring:
       connect-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
       use-global-data-source-stat: true
       filters: stat,wall,log4j2
+#如果不使用默认的数据源 （com.zaxxer.hikari.HikariDataSource）
+#spring.datasource.type =com.alibaba.druid.pool.DruidDataSource
+
+
 
 # redis 配置
   redis:
@@ -100,3 +104,15 @@ mybatis:
     use-generated-keys: true
     default-statement-timeout: 60
     default-fetch-size: 100
+
+
+
+#=================================微信相关====================================
+#微信开放平台配置
+wxopen:
+  appid: wx93ab8bc78863eddd
+  appsecret: f3ba90aa933c1671542f5cc3767a5734
+  #重定向url     http://c2b9u7.natappfree.cc/WxAuth/callBack
+  #test16web.tunnel.qydev.com 域名地址要和在微信端 回调域名配置 地址一直，否则会报回调地址参数错误
+  #http://c2b9u7.natappfree.cc 映射 127.0.0.1:8080,所以可以回调下面接口
+  redirect_url: http://c2b9u7.natappfree.cc/api/v1/wechat/user/code
