--- a/lyt-dao/pom.xml
+++ b/lyt-dao/pom.xml
@@ -246,6 +246,12 @@
 			<version>${jsch-version}</version>
 		</dependency>
 
+		<!-- gson工具，封装http的时候使用 -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
