--- a/pom.xml
+++ b/pom.xml
@@ -73,4 +73,11 @@
         <module>my-shop</module>
         <module>lyt-shop</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 </project>
